kubernetes/apps/media/grimmory/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grimmory
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grimmory
      app.kubernetes.io/instance: grimmory
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: shelfmark
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
